# flecs-sdl3-blend2d

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: blend.h  sdl.h
src/: blend.c  main.c  sdl.c
